SigmaCodebackup3rdSep/objects/Lot_Product__c.object
<CustomObject>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Lot Products</relationshipLabel>
        <relationshipName>Lot_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Lot Products</relationshipLabel>
        <relationshipName>Lot_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Lot Products</relationshipLabel>
        <relationshipName>Lot_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Lot__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lot Products</relationshipLabel>
        <relationshipName>Lot_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lot Product</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Lot Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lot Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>